change - symbol to ↺

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -103,7 +103,7 @@
                             </form>
                             <form action="/uncomplete?redirect={{../redirect}}" method="post">
                                 <input hidden value="{{id}}" name="id" />
-                                <button type="submit" class="btn btn-danger task-btn">-</button>
+                                <button type="submit" class="btn btn-danger task-btn">↺</button>
                             </form>
                         </div>
                     </div>
