add xml+xslt navbar

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -41,7 +41,7 @@
                             <form action="/addcategory" method="post">
                                 <div class="form-group">
                                     <input required type="text" class="form-control" name="category"
-                                        placeholder="Enter category name">
+                                        placeholder="Enter category name" />
                                 </div>
                                 <button class="form-control" type="submit">Add category</button>
                             </form>
