add completed text

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -28,4 +28,6 @@
         <category id="{{id}}">{{category}}</category>
         {{/each}}
     </categories>
+    <todays-date>{{todaysDate}}</todays-date>
+    <active>{{active}}</active>
 </data>
